项目初始化

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
+## ide
+*.iml
+rebel.xml
 .idea
+
+## backend
+**/target
+**/logs
+
+## front
+**/*.lock
+os_del.cmd
+os_del_doc.cmd
+.svn
+derby.log
